plugins/formal-verification/testData/diagnostics/uniqueness/bad_unique/direct_pass_shared_to_unique.kt
import org.jetbrains.kotlin.formver.plugin.NeverConvert
import org.jetbrains.kotlin.formver.plugin.NeverVerify
import org.jetbrains.kotlin.formver.plugin.Unique

@NeverConvert
@NeverVerify
fun f(@Unique x: Int) {

}

@NeverConvert
@NeverVerify
fun use_f(y: Int) {
    f(<!UNIQUENESS_VIOLATION!>y<!>)
}
